# torchnative

./: .gitignore
recipes/: flux_aoti.py
whisper_aoti/: Cargo.toml  README.md  demo.cast  export.py  nh.m4a  test.py
whisper_aoti/.cargo/: config.toml
whisper_aoti/src/: lib.rs  lib.rs.bak  main.rs
wip/: flux_aoti.py  flux_test.py  simple_aoti.py
